# ki7mt-ai-lab-cuda

./: CMakeLists.txt  Makefile  README  bump-version  ki7mt-ai-lab-core.spec  ki7mt-ai-lab-cuda.spec
include/: signature_kernel.cuh
sql/: 01-model_features.sql
src/: 01-wspr_schema.sql  02-solar_indices.sql  03-solar_silver.sql  04-data_mgmt.sql  05-geo_functions.sql  ki7mt-lab-db-init  ki7mt-lab-env
src/cuda/: verify_ingestion.sh  verify_layout.c  wspr_structs.h  wspr_structs_test.c
src/engine/: bulk_processor.cu  signature_kernel.cu  test_signature.cu  training_demo.cu
src/io/: clickhouse_loader.cpp  clickhouse_loader.hpp
